<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".SignUpActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sing_in_input_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sing_in_input_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/progressBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background"
                    android:text="@string/text_sign_in_button"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/text_view_register"
                    android:textColor="@android:color/holo_blue_light" />
                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/circularProgressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    app:cpb_indeterminate_mode="true"
                    app:cpb_background_progressbar_color="#b6bbd8"
                    app:cpb_background_progressbar_width="5dp"
                    app:cpb_progress_direction="to_right"
                    app:cpb_progressbar_color="#3f51b5"
                    app:cpb_progressbar_width="10dp"
                    android:visibility="invisible"
                    app:cpb_round_border="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sing_up_input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sing_up_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sing_up_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sing_up_input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/circularProgressBarSignUp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    app:cpb_indeterminate_mode="true"
                    app:cpb_background_progressbar_color="#b6bbd8"
                    app:cpb_background_progressbar_width="5dp"
                    app:cpb_progress_direction="to_right"
                    app:cpb_progressbar_color="#3f51b5"
                    app:cpb_progressbar_width="10dp"
                    android:visibility="invisible"
                    app:cpb_round_border="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background"
                    android:text="@string/text_sing_up_button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/text_view_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:text="@string/text_sign_in_button"
                        android:textColor="@android:color/holo_blue_light" />

                    <TextView
                        android:id="@+id/text_view_go_to_profile"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/text_view_go_to_profile"
                        android:textColor="@android:color/holo_blue_light" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/signup_profile_photo"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_profile"
                    app:civ_border_color="#3f51b5"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10dp"
                    app:civ_shadow_color="#3f51b5"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/continue_button"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background"
                    android:text="@string/continue_button"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ViewFlipper>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>